# qwencleo-asr

./: .gitignore  MODEL_CARD.md  PUBLISHING.md  README.md  pyproject.toml  requirements-serving.txt
app/: gradio_app.py
examples/: 01_quickstart.ipynb  02_chunked_transcription.ipynb  03_fastapi_server.ipynb  04_gradio_demo.ipynb  05_vllm_streaming.ipynb  README.md  _build_notebooks.py
server/: app.py  vllm_serve.md
src/qwencleo_asr/: __init__.py  cli.py  model.py  normalize.py  streaming.py  vllm_backend.py
