[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwencleo-asr"
version = "0.2.0"
description = "QwenCleo-ASR — Egyptian Arabic & code-switching speech recognition, built on Qwen3-ASR."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohammed Aly" }]
keywords = ["asr", "speech-recognition", "arabic", "egyptian", "code-switching", "qwen"]

# Runtime deps for plain inference + streaming. Heavy serving extras are opt-in.
dependencies = [
    "qwen-asr>=0.0.6",
    "torch>=2.5",
    "torchaudio>=2.5",
    "numpy",
    "soundfile",
    "huggingface_hub",
]

[project.optional-dependencies]
# `pip install qwencleo-asr[server]` for FastAPI serving.
server = ["fastapi", "uvicorn[standard]", "python-multipart"]
# `pip install qwencleo-asr[app]` for the Gradio demo.
app = ["gradio>=4.0"]
# `pip install qwencleo-asr[vllm]` installs ONLY the OpenAI-compatible client.
# IMPORTANT: do NOT let pip pull a stable vLLM — Qwen3-ASR support lives only in
# the vLLM *nightly (cu129)*, which is not on PyPI. A stable `pip install vllm`
# (e.g. 0.7.x) is too old and fails with "Transformers does not recognize
# qwen3_asr". Install the nightly manually (see server/vllm_serve.md):
#   uv pip install -U vllm --pre \
#     --extra-index-url https://wheels.vllm.ai/nightly/cu129 \
#     --extra-index-url https://download.pytorch.org/whl/cu129 \
#     --index-strategy unsafe-best-match
#   uv pip install "vllm[audio]"
vllm = ["openai", "httpx"]
# alias kept for back-compat
vllm-client = ["openai", "httpx"]
# everything (serving + app + vllm client; not vllm itself)
all = ["fastapi", "uvicorn[standard]", "python-multipart", "gradio>=4.0",
       "openai", "httpx"]

[project.urls]
Homepage = "https://huggingface.co/mohammedaly22/QwenCleo-ASR"
"Model Card" = "https://huggingface.co/mohammedaly22/QwenCleo-ASR"

[project.scripts]
qwencleo = "qwencleo_asr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qwencleo_asr = ["py.typed"]
